Release `v1.0.14`. (#18)
* Release `v1.0.14`.

* Added `Annotations` class with annotations utility methods.

* Updated documentation.

* Added annotation null check.

* Changed `Methods.getOneDeclaredInHierarchy` to return `null`.

* More test coverage.

* Small refactoring based on SonarLint.

* Fixed `overrideValue` not being public.

* Added `Classes.Scan` name space interface for class finders.

* Documentation.